samples/_failures_safe/1761561086_22ac07_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5ad9f295.c: In function ‘main’:
./samples/SAFE/__tmp_5ad9f295.c:171:5: error: expected declaration or statement at end of input
  171 |     return 0;
      |     ^~~~~~
